--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   path: ^1.8.0
   path_provider: ^2.0.6
   provider: ^6.0.1
+  datetime_picker_formfield: ^0.1.8
 
 
 dev_dependencies:
