--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,10 @@ dependencies:
   path_provider: ^2.0.6
   provider: ^6.0.1
   datetime_picker_formfield: ^0.1.8
-  intl: ^0.15.0
-
+  flutter_search_bar: ^2.1.0
+  getwidget: ^2.0.4
+  intl: ^0.15.8
+  flutter_slidable: ^1.1.0
 
 dev_dependencies:
   flutter_test:
