--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,10 @@ dependencies:
   path: ^1.8.0
   path_provider: ^2.0.6
   provider: ^6.0.1
-  datetime_picker_formfield: ^0.1.8
+  datetime_picker_formfield: 2.0.0
   flutter_search_bar: ^2.1.0
   getwidget: ^2.0.4
-  intl: ^0.15.8
+  intl: 0.17.0
   flutter_slidable: ^1.1.0
 
 dev_dependencies:
