--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   getwidget: ^2.0.4
   intl: 0.17.0
   flutter_slidable: ^1.1.0
+  expansion_tile_card: ^2.0.0
 
 dev_dependencies:
   flutter_test:
