--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   settings_ui: ^1.0.0
   gizmos_settings_screen: ^0.1.0-nullsafety.2
   stack: ^0.2.1
+  flutter_barcode_scanner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
