--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_barcode_scanner: ^2.0.0
   flutter_local_notifications: ^9.2.0
   flutter_native_timezone: ^2.0.0
+  android_alarm_manager_plus: ^2.0.3
 
 dev_dependencies:
   flutter_test:
