--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,10 +50,14 @@ dependencies:
   stack: ^0.2.1
   flutter_barcode_scanner: ^2.0.0
   flutter_local_notifications: ^9.2.0
+  flutter_native_splash: ^2.2.2
   flutter_native_timezone: ^2.0.0
   android_alarm_manager_plus: ^2.0.3
   showcaseview: ^1.1.5
   shared_preferences: ^2.0.11
+
+flutter_native_splash:
+  color: "#42a5f5"
 
 dev_dependencies:
   flutter_test:
